--- a/psync.1
+++ b/psync.1
@@ -3,15 +3,17 @@
 .\" -----------------------------------------------------------------------------
 .\" Copyright (c) 2006-2014, Pittsburgh Supercomputing Center (PSC).
 .\"
-.\" Permission to use, copy, and modify this software and its documentation
-.\" without fee for personal use or non-commercial use within your organization
-.\" is hereby granted, provided that the above copyright notice is preserved in
-.\" all copies and that the copyright and this permission notice appear in
-.\" supporting documentation.  Permission to redistribute this software to other
-.\" organizations or individuals is not permitted without the written permission
-.\" of the Pittsburgh Supercomputing Center.  PSC makes no representations about
-.\" the suitability of this software for any purpose.  It is provided "as is"
-.\" without express or implied warranty.
+.\" Permission to use, copy, modify, and distribute this software for any
+.\" purpose with or without fee is hereby granted, provided that the above
+.\" copyright notice and this permission notice appear in all copies.
+.\"
+.\" THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
+.\" WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
+.\" MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
+.\" ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
+.\" WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
+.\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
+.\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\" -----------------------------------------------------------------------------
 .\" %PSC_END_COPYRIGHT%
 .Dd October 30, 2014
