--- a/psync.1
+++ b/psync.1
@@ -14,6 +14,10 @@
 .\" WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
+.\"
+.\" Pittsburgh Supercomputing Center	phone: 412.268.4960  fax: 412.268.5832
+.\" 300 S. Craig Street			e-mail: remarks@psc.edu
+.\" Pittsburgh, PA 15213			web: http://www.psc.edu/
 .\" -----------------------------------------------------------------------------
 .\" %PSC_END_COPYRIGHT%
 .Dd October 30, 2014
