--- a/psync.1
+++ b/psync.1
@@ -1,7 +1,8 @@
 .\" $Id$
 .\" %ISC_START_LICENSE%
 .\" ---------------------------------------------------------------------
-.\" Copyright (c) 2011-2015, Pittsburgh Supercomputing Center (PSC).
+.\" Copyright 2014-2016, Google, LLC
+.\" Copyright 2014-2015, Pittsburgh Supercomputing Center
 .\" All rights reserved.
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
